added pages & partials

--- a/src/casino.html
+++ b/src/casino.html
@@ -3,18 +3,14 @@
 <div class="global-wrapper">
     //= partials/header.html
 
-    //= partials/first-block.html
-
     <!-- MAIN -->
     <div class="main">
 
         <div class="first-column">
 
-            <div class="casinol-list-wrap">
+            <div class="casino-list-wrap">
 
-                //= partials/casino-list.html
-
-                //= partials/paginator.html
+                //= partials/casino-item.html
 
                 //= partials/third-block-third.html
 
