--- a/src/login.html
+++ b/src/login.html
@@ -3,18 +3,16 @@
 <div class="global-wrapper">
     //= partials/header.html
 
-    //= partials/first-block.html
-
     <!-- MAIN -->
     <div class="main">
 
         <div class="first-column">
 
-            <div class="casinol-list-wrap">
+            <div class="login-wrap">
 
-                //= partials/casino-list.html
+                //= partials/login-form.html
 
-                //= partials/paginator.html
+                //= partials/third-block-second.html
 
                 //= partials/third-block-third.html
 
@@ -27,8 +25,6 @@
             //= partials/second-block.html
 
             //= partials/third-block-first.html
-
-            //= partials/third-block-second.html
 
         </div>
 
