--- a/src/statistic.html
+++ b/src/statistic.html
@@ -3,16 +3,14 @@
 <div class="global-wrapper">
     //= partials/header.html
 
-    //= partials/first-block.html
-
     <!-- MAIN -->
     <div class="main">
 
         <div class="first-column">
 
-            <div class="casinol-list-wrap">
+            <div class="statistic-list-wrap">
 
-                //= partials/casino-list.html
+                //= partials/statistic-list.html
 
                 //= partials/paginator.html
 
