--- a/src/index.html
+++ b/src/index.html
@@ -7,36 +7,40 @@
 
     <!-- MAIN -->
     <div class="main">
+        <div class="mbox cfix">
 
-        <div class="first-column">
+            //= partials/casino-list.html
 
-            <div class="casinol-list-wrap">
+<!--
+            <div class="first-column">
 
-                //= partials/casino-list.html
+                <div class="casinol-list-wrap">
 
-                //= partials/paginator.html
+                    //= partials/casino-list.html
 
-                //= partials/third-block-third.html
+                    //= partials/third-block-third.html
+
+                </div>
 
             </div>
 
+            <div class="second-column">
+
+                //= partials/second-block.html
+
+                //= partials/third-block-first.html
+
+                //= partials/third-block-second.html
+
+            </div>
+
+            <div class="third-column">
+
+                //= partials/third-block.html
+
+            </div>
         </div>
-
-        <div class="second-column">
-
-            //= partials/second-block.html
-
-            //= partials/third-block-first.html
-
-            //= partials/third-block-second.html
-
-        </div>
-
-        <div class="third-column">
-
-            //= partials/third-block.html
-
-        </div>
+-->
 
     </div>
 
