--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 
     <!-- MAIN -->
     <div class="main">
-        <div class="mbox cfix">
+        <div class="mbox cfix super-stat">
 
             //= partials/casino-list.html
 
