--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,13 @@
 
     <!-- MAIN -->
     <div class="main">
-        <div class="mbox cfix super-stat">
+        <div class="mbox ">
+            <div class="super-stat">
+                //= partials/casino-list.html
+                <div class="cfix"></div>
+            </div>
 
-            //= partials/casino-list.html
+
 
 <!--
             <div class="first-column">
@@ -43,7 +47,7 @@
 -->
 
     </div>
-
+</div>
     //= partials/baner-super.html
 
     <!-- /MAIN -->
