--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,10 @@
         <div class="mbox ">
             <div class="super-stat">
                 //= partials/casino-list.html
+                //= partials/second-block.html
+                //= partials/third-block-first.html
+                //= partials/third-block-second.html
+                //= partials/third-block-third.html
                 <div class="cfix"></div>
             </div>
 
@@ -23,7 +27,6 @@
 
                     //= partials/casino-list.html
 
-                    //= partials/third-block-third.html
 
                 </div>
 
