--- a/src/casino.html
+++ b/src/casino.html
@@ -5,14 +5,37 @@
 
     <!-- MAIN -->
     <div class="main">
+        <div class="mbox ">
+            <div class="super-stat">
+                //= partials/casino-item.html
+                //= partials/second-block.html
 
+                <div class="slice-wrap slice1 disigner-my-duck-2" >
+                    //= partials/third-block-first.html
+                </div>
+
+                <div class="slice-wrap slice2 disigner-my-duck">
+                    //= partials/third-block-second.html
+                </div>
+
+                <div class="slice-wrap slice3">
+                    //= partials/third-block-third.html
+                </div>
+
+                <div class="cfix"></div>
+            </div>
+        </div>
+
+        <!--
         <div class="first-column">
 
             <div class="casino-list-wrap">
 
-                //= partials/casino-item.html
+
 
                 //= partials/third-block-third.html
+
+
 
             </div>
 
@@ -33,6 +56,7 @@
             //= partials/third-block.html
 
         </div>
+        -->
 
     </div>
 
