--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,17 @@
             <div class="super-stat">
                 //= partials/casino-list.html
                 //= partials/second-block.html
-                //= partials/third-block-first.html
-                //= partials/third-block-second.html
-                //= partials/third-block-third.html
+
+                <div class="slice-wrap slice1">
+                    //= partials/third-block-first.html
+                </div>
+                <div class="slice-wrap slice2">
+                    //= partials/third-block-second.html
+                </div>
+                <div class="slice-wrap slice3">
+                    //= partials/third-block-third.html
+                </div>
+
                 <div class="cfix"></div>
             </div>
 
