--- a/src/casino.html
+++ b/src/casino.html
@@ -7,7 +7,10 @@
     <div class="main">
         <div class="mbox ">
             <div class="super-stat">
-                //= partials/casino-item.html
+                <div class="casino-list-wrap">
+                    //= partials/casino-item.html
+                </div>
+
                 //= partials/second-block.html
 
                 <div class="slice-wrap slice1 disigner-my-duck-2" >
