--- a/src/registration.html
+++ b/src/registration.html
@@ -5,37 +5,30 @@
 
     <!-- MAIN -->
     <div class="main">
+        <div class="mbox ">
+            <div class="super-stat">
+                <div class="casino-list-wrap">
+                    //= partials/registration-form.html
+                    //= partials/registration-message.html
+                </div>
 
-        <div class="first-column">
 
-            <div class="registration-wrap">
 
-                //= partials/registration-form.html
+                //= partials/second-block.html
 
-                //= partials/registration-message.html
+                <div class="slice-wrap slice1 disigner-my-duck-2">
+                    //= partials/third-block-first.html
+                </div>
+                <div class="slice-wrap slice2 disigner-my-duck">
+                    //= partials/third-block-second.html
+                </div>
+                <div class="slice-wrap slice3">
+                    //= partials/third-block-third.html
+                </div>
 
-                //= partials/third-block-second.html
-
-                //= partials/third-block-third.html
-
+                <div class="cfix"></div>
             </div>
-
         </div>
-
-        <div class="second-column">
-
-            //= partials/second-block.html
-
-            //= partials/third-block-first.html
-
-        </div>
-
-        <div class="third-column">
-
-            //= partials/third-block.html
-
-        </div>
-
     </div>
 
     //= partials/baner-super.html
