--- a/src/statistic-main.html
+++ b/src/statistic-main.html
@@ -5,35 +5,27 @@
 
     <!-- MAIN -->
     <div class="main">
+        <div class="mbox ">
+            <div class="super-stat">
+                <div class="casino-list-wrap">
+                    //= partials/statistic-item.html
+                </div>
 
-        <div class="first-column">
+                //= partials/second-block.html
 
-            <div class="statistic-wrap">
+                <div class="slice-wrap slice1 disigner-my-duck-2">
+                    //= partials/third-block-first.html
+                </div>
+                <div class="slice-wrap slice2 disigner-my-duck">
+                    //= partials/third-block-second.html
+                </div>
+                <div class="slice-wrap slice3">
+                    //= partials/third-block-third.html
+                </div>
 
-                //= partials/statistic-item.html
-
-                //= partials/third-block-third.html
-
+                <div class="cfix"></div>
             </div>
-
         </div>
-
-        <div class="second-column">
-
-            //= partials/second-block.html
-
-            //= partials/third-block-first.html
-
-            //= partials/third-block-second.html
-
-        </div>
-
-        <div class="third-column">
-
-            //= partials/third-block.html
-
-        </div>
-
     </div>
 
     //= partials/baner-super.html
