--- a/src/casino.html
+++ b/src/casino.html
@@ -13,7 +13,7 @@
 
                 //= partials/second-block.html
 
-                <div class="slice-wrap slice1 disigner-my-duck-2" >
+                <div class="slice-wrap slice1 disigner-my-duck-2 disigner-1" >
                     //= partials/third-block-first.html
                 </div>
 
@@ -23,6 +23,10 @@
 
                 <div class="slice-wrap slice3">
                     //= partials/third-block-third.html
+                </div>
+
+                <div class="slice-wrap slice1 disigner-my-duck-2 disigner-2" >
+                    //= partials/third-block-first.html
                 </div>
 
                 <div class="cfix"></div>
