--- a/src/index.html
+++ b/src/index.html
@@ -13,15 +13,20 @@
                 //= partials/casino-list.html
                 //= partials/second-block.html
 
-                <div class="slice-wrap slice1">
+                <div class="slice-wrap slice1 disigner-my-duck-2 disigner-1" >
                     //= partials/third-block-first.html
                 </div>
+
                 <div class="slice-wrap slice2">
                     //= partials/third-block-second.html
                 </div>
                 <div class="slice-wrap slice3">
                     //= partials/third-block-third.html
                 </div>
+                <div class="slice-wrap slice1 disigner-my-duck-2 disigner-2" >
+                    //= partials/third-block-first.html
+                </div>
+
 
                 <div class="cfix"></div>
             </div>
