--- a/src/statistic.html
+++ b/src/statistic.html
@@ -12,15 +12,20 @@
                     //= partials/paginator.html
                 </div>
                 //= partials/second-block.html
-                <div class="slice-wrap slice1 disigner-my-duck-2">
+                <div class="slice-wrap slice1 disigner-my-duck-2 disigner-1" >
                     //= partials/third-block-first.html
                 </div>
+
                 <div class="slice-wrap slice2 disigner-my-duck">
                     //= partials/third-block-second.html
                 </div>
                 <div class="slice-wrap slice3">
                     //= partials/third-block-third.html
                 </div>
+                <div class="slice-wrap slice1 disigner-my-duck-2 disigner-2" >
+                    //= partials/third-block-first.html
+                </div>
+
 
                 <div class="cfix"></div>
             </div>
