--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,8 @@
 
 
 
+
+
 <!--
             <div class="first-column">
 
@@ -64,6 +66,10 @@
 -->
         </div>
     </div>
+</div>
+
+<div class="block-soc-4-victor">
+
 </div>
     //= partials/baner-super.html
 
