--- a/src/login.html
+++ b/src/login.html
@@ -33,6 +33,10 @@
         </div>
     </div>
 
+    <div class="block-soc-4-victor">
+
+    </div>
+
     //= partials/baner-super.html
 
     <!-- /MAIN -->
