--- a/src/registration.html
+++ b/src/registration.html
@@ -35,6 +35,9 @@
             </div>
         </div>
     </div>
+    <div class="block-soc-4-victor">
+
+    </div>
 
     //= partials/baner-super.html
 
