--- a/src/statistic-main.html
+++ b/src/statistic-main.html
@@ -32,6 +32,9 @@
             </div>
         </div>
     </div>
+    <div class="block-soc-4-victor">
+
+    </div>
 
     //= partials/baner-super.html
 
